update -> package json updated

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sendmessageemail",
   "version": "1.0.0",
   "description": "send email to email",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
